# TestPlatform-wx

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  alembic.ini  memory-MEMORY-update.md  memory-feedback-500.md  memory-feedback-execution-runtime.md  memory-feedback-project-north-star.md  memory-feedback-testcase-generation.md  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
.claude/: settings.local.json
.codegraph/: daemon.pid
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py
config/: acn_modules.yaml  automation_lexicon.yaml  execution_testdata.yaml  llm_providers.yaml  platforms.yaml  settings.yaml
data/: ACN_buglist.xlsx
deployments/: .env.example  Dockerfile  docker-compose.yml  nginx.conf
docs/: agent_runtime.md  cursor_agent_models.md  execution_plan.md  execution_runtime_design.md  langgraph_migration_plans.md  pipeline_harness_evolution.md  rectification_report.md  requirement_analysis_module.md
docs/plans/: auto-execution-module.md
execution_runtime/: __init__.py  agent_tool_runner.py  case_runner.py  config.py  defect.py  recorder.py  runner.py  testdata.py
execution_runtime/compiler/: __init__.py  compiler.py  local_compiler.py  nl_assert.py
execution_runtime/config/: settings.yaml
execution_runtime/dsl/: __init__.py  models.py
execution_runtime/engine/: __init__.py  appium_driver.py  executor.py
execution_runtime/env/: __init__.py  precheck.py
scripts/: export_execution_task.py  init_db.py  iterate_skill.py  rebuild_knowbase_index.py  record_setup_flow.py
src/: main.py
(+237 files in other folders)
