[project]
name = "test-platform"
version = "0.1.0"
description = "Natural language driven software testing platform"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "celery>=5.4.0",
    "redis>=5.1.0",
    "httpx>=0.27.0",
    "jsonschema>=4.22.0",
    "structlog>=24.4.0",
    "pyyaml>=6.2.0",
    "jinja2>=3.1.4",
    "weasyprint>=61.0",
    "tenacity>=9.0.0",
    "transitions>=0.9.0",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["setuptools>=69.5.0"]
build-backend = "setuptools.backends._legacy:_Backend"
